/*
 * SPDX-FileCopyrightText: Copyright 2024 LG Electronics Inc.
 * SPDX-License-Identifier: Apache-2.0
 */

syntax = "proto3";

package monitoringclient;

service MonitoringClientConnection {
  rpc SendImageList (ImageList) returns (Response);
  rpc SendContainerList (ContainerList) returns (Response);
  rpc SendPodList (PodList) returns (Response);
}

message Response {
  string resp = 1;
}

message ImageList {
  string node_name =1;
  repeated string images = 2;
}

message ContainerList {
  string node_name =1;
  repeated ContainerInfo containers = 2;
}

message ContainerInfo {
  string id = 1;
  repeated string names = 2;
  string image = 3;
  map<string, string> state = 4;
  map<string, string> config = 5;
  map<string, string> annotation = 6;
}

message PodList {
  string node_name =1;
  repeated PodInfo pods = 2;
}

message PodInfo {
  string id = 1;
  string name = 2;
  repeated PodContainerInfo containers = 3;  
  string state = 4;  
  string host_name = 6;
  string created = 7;
}

message PodContainerInfo {
  string id = 1;
  string name = 2;
  string state = 3;
}
